F26/css/main.4.css
body {
    font-family: 'Open Sans', sans-serif;
    font-size: 1.5em;
    font-weight: 300;
}

b {
    font-weight: 400;
}

code {
    font-size: 65%;
}

.header {
    position: fixed;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    top: 0;
    left: 0;
    width: 100%;
    background-color: #A80000;
    font-size: 1.1em;
    color: white;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
    z-index: 1000;
}

.menu-wrapper {
    float: left;
    -webkit-box-flex: 4;
        -ms-flex-positive: 4;
            flex-grow: 4;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    gap: 4px;
    padding: 6px 12px;
}

.header-item {
    display: inline-block;
    color: white;
    text-align: center;
    cursor: pointer;
    padding: 10px 14px;
    width: -webkit-fit-content;
    width: -moz-fit-content;
    width: fit-content;
    border-radius: 4px;
    -webkit-transition: background-color 0.15s ease;
    -o-transition: background-color 0.15s ease;
    transition: background-color 0.15s ease;
    font-weight: 400;
    letter-spacing: 0.02em;
}

.header-item:hover {
    background-color: rgba(255, 255, 255, 0.15);
}

.header-item.active {
    background-color: rgba(255, 255, 255, 0.2);
    border-radius: 4px;
}

.version-menu {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    gap: 8px;
    padding: 10px 16px;
    text-align: right;
}


.version-icon {
    color: rgba(255, 255, 255, 0.85);
    border-radius: 4px;
    padding: 6px 10px;
    cursor: pointer;
    text-decoration: none;
    font-weight: 400;
    -webkit-transition: all 0.15s ease;
    -o-transition: all 0.15s ease;
    transition: all 0.15s ease;
}

.version-icon:visited {
    color: rgba(255, 255, 255, 0.85);
    text-decoration: none;
}
.version-icon:hover {
    color: white;
    text-decoration: none;
    background-color: rgba(255, 255, 255, 0.15);
}
.version-icon:active {
    color: white;
    text-decoration: none;
}

.current-icon {
    cursor: auto;
    background-color: rgba(255, 255, 255, 0.2);
    border-radius: 4px;
    padding: 6px 10px;
    color: white;
    font-weight: 600;
}

.mobile-header {
    display: none
}
.m-header-item {
    display: none;
}
.m-version-menu {
    display: none;
}

@media (max-width: 1150px) {
    .m-header-item {
        display: block;
        width: 100%;
        padding-top: 3%;
        padding-bottom: 3%;
        font-size: 2em;
        text-align: center;
        color: white;
        cursor: pointer;
    }
    .m-header-item:hover {
        background-color: #A54B4B;
    }
    .m-header-item.active {
        background-color: #b96765;
    }

    .menu-exit {
        color: rgba(0, 0, 0, .25);
        font-size: 2.2em;
    }

    .mobile-menu {
        visibility: hidden;
        position: fixed;
        left: 101%;
        padding-top: 3%;
        top: 0;
        height: 100%;
        width: 400px;
        background-color: #A54B4B;

        -webkit-transition: left 0.06s ease-in-out;
        -o-transition: left 0.06s ease-in-out;
        transition: left 0.06s ease-in-out;
    }
    .mobile-menu.vis {
        visibility: visible;
        z-index: 1;
        left: calc(100% - 400px);
    }

    .m-version-menu {
        display: block;
        text-align: center;
        position: absolute;
        width: 100%;
        bottom: 2%;
        font-size: 1.8em;
    }

    .menu-backdrop {
        visibility: hidden;
        position: fixed;
        top: 0;
        left: 0;
        height: 100%;
        width: 100%;
        background-color: rgba(255, 255, 255, 0);

        -webkit-transition: background-color 0.1s ease-in-out;
        -o-transition: background-color 0.1s ease-in-out;
        transition: background-color 0.1s ease-in-out;
    }
    .menu-backdrop.vis {
        visibility: visible;
        background-color: rgba(0, 0, 0, 0.5);
    }

    .header {
        display: none
    }
    .mobile-header {
        display: block;
        position: fixed;
        text-align: center;
        top: 0;
        left: 0;
        width: 100%;
        font-size: 30px;
        background-color: #B55B5B;
        background-color: #A80000;
    }
    #menu-button {
        cursor: pointer;
        float: right;
        padding-left: 15px;
        padding-right: 15px;
        background-color: #AF4F4F;
        color: white;
        font-size: 40px;
    }
}

.zoom {
    color: white;
    background-color:#847777;
    border-radius: 9px;
    font-size: .7em;
    padding: 5px;
    padding: 2px 7px 2px 7px;
}
.zoom:hover {
    text-decoration: none;
    color: white;
}
.zoom:visited {
    color: white
}

.m-policy-header {
    display: none
}

@media (max-width: 600px) {
    .m-policy-header {
        display: unset
    }
    .policy-header {
        display: none;
    }
    .policy-spacer {
        display: none;
    }
}

@media (max-width: 400px) {
    .mobile-menu {
        width: 100%;
    }
    .mobile-menu.vis {
        left: 0;
    }
}

@media (max-height: 680px) {
    .m-header-item {
        padding-top: 2%;
        padding-bottom: 2%;
        font-size: 1.6em;
    }
    .m-version-menu {
        font-size: 1.5em;
        bottom: 1%;
    }
}

@media (max-height: 530px) {
    .m-header-item {
        padding-top: 0;
        padding-bottom: 0;
        font-size: 6.5vh;
    }
}

footer {
    margin-top: 60px;
    margin-bottom: 30px;
    text-align: center;
}

h2 {
    color: #b05145;
}

h3 {
    color: #bf766d;
    font-weight: 300;
}

a, a:hover {
    color: #b05145;
}

.container {
    max-width: 1200px;
    padding-left: 25px;
    padding-right: 25px;
}

.titlebar {
    padding-top: 60px;
    padding-bottom: 40px;
    overflow: auto;
    white-space: normal;
}

@media (max-width: 1200px) {
    .titlebar {
        text-align: center;
    }
}

.titlebar-img {
    width: 180px;
    height: 180px;
    /*float: left;*/
}

.titlebar-text {
    max-width: 66.66666667%;
    float: left;
    white-space: normal;
}

.title-col {
    text-align: center;
    display: inline;
}

#title {
    font-size: 3em;
}

.subtitle {
    font-size: 2em;
}

.infoline {
    width: 100%;
}

.infoline-heading {
    width: 130px;
    text-align: right;
    display: inline-block;
}

.infoline-text {
    width: 50%;
    text-align: left;
    display: inline-block;
    vertical-align: text-top;
}

.grade-table {
    width: 100%;
}

.grade-table-header {
    border-bottom-width: 1px;
    border-bottom-style: solid;
}

.grade-table-bottom {
    border-top-width: 1px;
    border-top-style: solid;
}

.rules-table{
    width: 100%;
}

.rules-table-header {
    border-bottom-width: 1px;
    border-bottom-style: solid;
}
.rules-table-bottom {
    color: rgba(0, 0, 0, 0);
    background: rgba(0, 0, 0, 0);

    border-top-width: 1px;
    border-top-style: solid;
}

.textbook {
    display: block;
    height: 95px;
    margin-bottom: 10px;
}

.textbook-img-container {
    display: inline-block;
    float: left;
    margin-right: 10px;
}

    .textbook-img-container img {
        height: 95px;
        width: 70px;
        border-radius: 2px;
    }

.textbook-info-item {
    display: block;
}

.vcenter {
    display: inline-block;
    vertical-align: middle;
    float: none;
}

#logo {
    width: 90%;
    height: auto;
}

.ul {
    list-style: none;
    padding-left: 1.2em;
}

table.rules-table td {
vertical-align: top;
padding-bottom: 5px;
padding-top: 5px;
}

